# smi-profiler

./: CMakeLists.txt  README.md
src/: global.h  rocm-smi_backend.cpp  rocm-smi_backend.h  smiProfiler.cpp  smiProfiler.h
